# py-env-studio

./: .gitignore  .readthedocs.yaml  README.md  RELEASE_NOTES.md  badges.html  mkdocs.yml  py_env_studio.db  pyproject.toml  test_plugin_events.py  test_plugin_import.py  test_plugin_load.py
.github/: FUNDING.yml
.github/workflows/: publish.yml
docs/: PLUGINS_ARCHITECTURE.md  PLUGIN_DEVELOPMENT.md  PLUGIN_DOCUMENTATION_INDEX.md  PLUGIN_QUICK_REFERENCE.md  cli.md  contributing.md  features.md  index.md  install.md  requirements.txt  roadmap.md  usage.md
examples/sample_plugin/: README.md  __init__.py  plugin.json  sample_plugin.py
py-env-studio/: pyproject.toml
py-env-studio/core/: env_manager.py
py-env-studio/ui/: main_window.py
py_env_studio/: README.md  config.ini  main.py  requirements.txt
py_env_studio/core/: auto_resolve.py  bootstrap.py  configuration.py  database.py  env_manager.py  integration.py  package_manager.py  pip_tools.py  py_tonic.py  runtime.py  setup_state.py  strategies.py  uv_tools.py
py_env_studio/core/plugins/: README.md  __init__.py  base.py  exceptions.py  (+1 more)
py_env_studio/other/: data.json  data2.json  g_matricx_security_matrix.json  security_matrix.json  vulneribility_insights.py
py_env_studio/others/: vulnerability_insights_app_updated.py
py_env_studio/resources/: py_env_studio.db
py_env_studio/ui/: main_window.py
py_env_studio/utils/: db_matrix.json  handlers.py  py_env_studio.db  security_matrix.json  vulnerability_info.csv  vulnerability_info.json  vulneribility_scanner.py
setup/: db.py  state.py  test_window.py
